[workspace]
resolver = "2"
members = [
    "types",
    "styles",
    "ui_helper",
    "logging",
    "itemeditor",
    "npceditor",
    "shopeditor"
]

[workspace.dependencies]
rand = "0.8.5"
num-traits = "0.2.19"
serde = { version = "1.0.203", features = ["derive"] }
educe = "0.6.0"
chrono = { version = "0.4.38", features = ["serde"] }
strum_macros = "0.26.4"
num_enum = "0.7.2"
serde_json = "1.0.117"
serde-big-array = "0.5.1"
arr_macro = "0.2.1"
backtrace = "0.3.73"
log = "0.4.21"
itertools = "0.13.0"
bytey = { version = "0.3.0", git = "https://github.com/Stefanowhb/bytey.git" }
speedy = "0.8.7"

[workspace.dependencies.ascending_logger]
path = "./logging"

[workspace.dependencies.ascending_ui]
path = "./ui_helper"

[workspace.dependencies.ascending_types]
path = "./types"

[workspace.dependencies.ascending_styles]
path = "./styles"

[workspace.dependencies.iced_aw]
#git = "https://github.com/iced-rs/iced_aw.git"
version = "0.9.3"

[workspace.dependencies.iced]
version = "0.12.0"
features = ["canvas", "tokio", "image", "debug", "wgpu", "advanced"]
