[package]
name = "item_editor"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytey.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-big-array.workspace = true
educe.workspace = true
chrono.workspace = true
strum_macros.workspace = true
arr_macro.workspace = true
num_enum.workspace = true
backtrace.workspace = true
araiseal_logger.workspace = true
araiseal_styles.workspace = true
araiseal_ui.workspace = true
araiseal_types.workspace = true
iced_aw.workspace = true
iced.workspace = true
