[package]
name = "map_editor"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-big-array.workspace = true
educe.workspace = true
serde_repr.workspace = true
chrono.workspace = true
strum_macros.workspace = true
arr_macro.workspace = true
num_enum.workspace = true
backtrace.workspace = true
araiseal_logger.workspace = true
araiseal_styles.workspace = true
araiseal_ui.workspace = true
araiseal_types.workspace = true
#iced_aw.workspace = true
#iced.workspace = true
graphics = { git = "https://github.com/AscendingCreations/render_demo.git", package = "ascending_graphics"}
camera = { git = "https://github.com/AscendingCreations/render_demo.git", package = "ascending_camera"}
input = { git = "https://github.com/AscendingCreations/render_demo.git", package = "ascending_input" }
winit = { version = "0.28.3", features = ["serde"] }
cosmic-text = { git = "https://github.com/pop-os/cosmic-text" }
tokio = { version = "1.28.0", features = ["full"] }
num-traits.workspace = true

[dependencies.naga]
#git = "https://github.com/gfx-rs/naga"
#rev = "76003dc0035d53a474d366dcdf49d2e4d12e921f"
version = "0.12.0"
features = ["span", "validate", "wgsl-in"]

[dependencies.wgpu]
#git = "https://github.com/gfx-rs/wgpu"
#rev = "061e04b"
#features = ["angle"]
version = "0.16.0"