[package]
name = "mapeditor"
version = "0.1.0"
authors = ["S.J.R. van Schaik", "Andrew Wheeler <genusistimelord@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2021"
resolver = "2"

[dependencies]
bytemuck = { version = "1.14.0", features = ["derive"] }
mint = "0.5.9"
thiserror = "1.0.48"
winit = { version = "0.29.10", features = ["serde", "rwh_05"] }
image = "0.24.7"
tokio = { version = "1.32.0", features = ["full"] }
guillotiere = "0.6.2"
serde = { version = "1.0.188", features = ["derive"] }
log = "0.4.20"
backtrace = "0.3.69"
futures = "0.3.28"
chrono = { version = "0.4.30", disable-defaults = true, features = [
    "clock",
    "serde",
    "std",
] }
ubits = "0.3.1"
hecs = "0.10.3"
glam = { version = "0.24.1", features = ["bytemuck", "mint"] }
serde_json = "1.0.82"
indexmap = "2.1.0"
slab = "0.4.9"
bit_op = "0.1.1"
bytey = { version = "0.3.0", git = "https://github.com/Stefanowhb/bytey.git" }
speedy.workspace = true

[dependencies.camera]
git = "https://github.com/AscendingCreations/AscendingLibraries"
#path = "../AscendingLibraries/camera"
#rev = "f2324c1"
package = "ascending_camera"
version = "0.1.1"

[dependencies.input]
git = "https://github.com/AscendingCreations/AscendingLibraries"
#path = "../AscendingLibraries/input"
#rev = "f2324c1"
package = "ascending_input"
version = "0.2.1"

[dependencies.graphics]
git = "https://github.com/AscendingCreations/AscendingLibraries"
#path = "../AscendingLibraries/graphics"
#rev = "f2324c1"
package = "ascending_graphics"
version = "0.4.2"
