[package]
name = "npceditor"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
serde-big-array = "0.4.1"
educe = "0.4.19"
serde_repr = "0.1.8"
chrono = { version = "0.4.19", features = ["serde"] }
strum_macros = "0.24.2"
arr_macro = "0.1.3"
num_enum = "0.5.7"
backtrace = "0.3.66"
itertools = "0.10.3"

[dependencies.araiseal_styles]
path = "../styles"

[dependencies.araiseal_ui]
path = "../ui_helper"

[dependencies.araiseal_types]
path = "../types"

[dependencies.araiseal_logger]
path = "../logging"

[dependencies.iced_aw]
#git = "https://github.com/genusistimelord/iced_aw.git"
#branch = "beta"
version = "0.2.0"
default-features = false
features = [
    "number_input",
    "time_picker",
    "color_picker",
    "colors",
]

[dependencies.iced_style]
#git = "https://github.com/genusistimelord/iced_aw.git"
#branch = "beta"
version = "0.4.0"

[dependencies.iced]
#git = "https://github.com/genusistimelord/iced_aw.git"
#branch = "beta"
version = "0.4.2"
features = [
    "canvas",
    "tokio",
    "image",
    "debug",
    "wgpu",
]