[package]
name = "araiseal_styles"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

[dependencies.iced_aw]
#git = "https://github.com/genusistimelord/iced_aw.git"
#branch = "beta"
version = "0.2.0"
default-features = false
features = [
    "number_input",
    "color_picker",
    "colors",
]

[dependencies.iced_style]
#git = "https://github.com/genusistimelord/iced_aw.git"
#branch = "beta"
version = "0.4.0"

[dependencies.iced]
#git = "https://github.com/genusistimelord/iced_aw.git"
#branch = "beta"
version = "0.4.2"
features = [
    "canvas",
    "tokio",
    "image",
    "debug",
    "wgpu",
]