[package]
name = "ascending_styles"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = [
    "Andrew Wheeler <genusistimelord@outlook.com>",
    "Sherwin Salonga",
    "S.J.R. van Schaik",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand.workspace = true
iced.workspace = true
iced_aw.workspace = true
