[package]
name = "araiseal_types"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.140", features = ["derive"] }
educe = "0.4.19"
serde_repr = "0.1.8"
chrono = { version = "0.4.19", features = ["serde"] }
strum_macros = "0.24.2"
num_enum = "0.5.7"
