[package]
name = "araiseal_types"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
educe.workspace = true
chrono.workspace = true
strum_macros.workspace = true
num_enum.workspace = true
