[package]
name = "araiseal_ui"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand.workspace = true
num-traits.workspace = true
araiseal_styles.workspace = true
iced_aw.workspace = true
iced_style.workspace = true
iced.workspace = true